# intelligent_traffic

./: README.md  lrk_server.py  lrkmsg
lrkmsg/include/: PR.h
lrkmsg/msg/: image_info.msg  obj_info.msg
lrkmsg/src/: image_publisher.cpp
src/lrkmsg/: CMakeLists.txt  package.xml
src/lrkmsg/launch/: lrk_start_all.launch
src/lrkmsg/msg/: blk_info.msg  cmd_info.msg
src/lrkmsg/scripts/: lrk_detectcar.py  lrk_main.py  lrk_server.py
src/lrkmsg/src/: image_publisher.cpp  test.cpp
